--- a/pages/topic_3.html
+++ b/pages/topic_3.html
@@ -59,12 +59,58 @@
                                         Habana.<sup><a href="#" class="biblio-links">1</a></sup></span>
                                 </div>
                             </blockquote>
+                            <figure>
+                                <img src="../assets/images/topic_3/etica.png" alt="cuba" class="responsive" width="500"
+                                    loading="lazy">
+                                <figcaption><i>Ética. Mapa conceptual</i></figcaption>
+                            </figure>
+                            </p>
+                            <p>
+                                <strong>Moral y Ética, ¿sinónimos?</strong>
+                                <br>
+                                La moral y la ética han venido configurándose técnicamente como dos formas de reflexión
+                                (la moral), que pertenece al mundo de la vida, y la otra (la ética) que se identifica
+                                como un saber de expertos, como es la Filosofía.<sup><a href="#biblio-1"
+                                        class="biblio-links">1</a></sup>
+                                <br><br>
+                                Por distinguir dos niveles de reflexión distintos -el cotidiano y el filosófico-
+                                pensadores
+                                como José L. López Aranguren han llamado a la moral "moral de la vida", y a la ética,
+                                "moral
+                                pensada". La ética no es reducible al acto moral y a la acción moral individual, es un
+                                nivel
+                                de reflexión teórica sobre la conducta moral, sobre el proceder moral del individuo en
+                                sociedad, "no hay que confundir, dice A. Sánchez Vázquez, la teoría con su objeto: el
+                                mundo
+                                moral".<sup><a href="#biblio-1" class="biblio-links">2</a></sup>
+                            </p>
                         </div>
                     </div>
                     <div class="subtopic-container" id="subtopic_2">
                         <div class="subtopic-title">2. La Ética Informática: definición y necesidad.</div>
                         <div class="subtopic">
-                            
+                            <p>
+                                Dentro del campo de estudio CTS los aspectos axiológicos son importantes pues
+                                constantemente se deben estar midiendo los posibles impactos o condicionantes
+                                sociales relacionados con la ciencia y la tecnología
+                                <br><br>
+                                La informática ha logrado en un período de tiempo relativamente pequeño, pasar a jugar
+                                un papel preponderante en los planes acelerados de desarrollo de la sociedad actual.
+                                Pero tiene sombras Hoy se cuestiona si la informática necesita de una ética especifica o
+                                puede utilizar la ya conocida
+                            </p>
+                            <p>
+                                <strong>¿Qué es la ética informática</strong>
+                            <blockquote>
+                                <p style="text-align: justify;">
+                                    “Estudio del entorno del impacto social de la tecnología informática, identificando,
+                                    analizando y participando en la prevención de los efectos negativos en los valores
+                                    humanos”
+                                </p>
+                                <div class="quote-footer"><span class="quote-footer-text">González Arencibia, 2006.<sup><a href="#" class="biblio-links">1</a></sup></span>
+                                </div>
+                            </blockquote>
+                            </p>
                         </div>
                     </div>
                     <div class="subtopic-container" id="subtopic_3">
@@ -92,14 +138,12 @@
             <section class="content biblio" id="cont-6">
                 <div class="content-title">Bibliografía consultada</div>
                 <div class="container">
-                    <!-- <div class="subtopic-container" id="subtopic_5">
+                    <div class="subtopic-container" id="subtopic_5">
                         <ol>
-                            <li id="biblio-1">Fidel Martínez Álvarez . Hacia una visión integral de la ciencia y la
-                                tecnología. <a target="_blank" href="http://www.oei.es/salactsi/vision.htm"
-                                    class="biblio-links">http://www.oei.es/salactsi/vision.htm</a>
+                            <li id="biblio-1">López Bombino: El saber ético de ayer y hoy. 2004: 72-73.
                             </li>
                         </ol>
-                    </div> -->
+                    </div>
                 </div>
             </section>
             <section id="page-nav">
@@ -108,7 +152,7 @@
                                 xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
                                 <path d="M480 896 160 576l320-320 57 56-224 224h487v80H313l224 224-57 56Z" />
                             </svg><span class="page-nav-word">Anterior</span></a></span>
-                    <span class="next page-nav"><a href="/pages/topic_3.html"><span
+                    <span class="next page-nav"><a href="/pages/topic_4.html"><span
                                 class="page-nav-word">Siguiente</span><svg xmlns="http://www.w3.org/2000/svg"
                                 height="24" viewBox="0 96 960 960" width="24">
                                 <path d="m480 896-57-56 224-224H160v-80h487L423 312l57-56 320 320-320 320Z" />
@@ -120,13 +164,14 @@
             <div class="content">
                 <div class="content-title">Índice</div>
                 <div class="container">
-                    <div class="aside-links-container"><a href="#subtopic_1" class="aside-links">1. La visión
-                            tradicional de la ciencia y el tránsito hacia el enfoque social.</a></div>
-                    <div class="aside-links-container"><a href="#subtopic_2" class="aside-links">2. El giro historicista
-                            de Kuhn y el enfoque social de la ciencia.</a></div>
-                    <div class="aside-links-container"><a href="#subtopic_3" class="aside-links">3.Visión CTS de la
-                            ciencia.</a></div>
-                    <div class="aside-links-container"><a href="#cont-5" class="aside-links">Vea también</a></div>
+                    <div class="aside-links-container"><a href="#subtopic_1" class="aside-links">1. Ética: definiciones
+                            y lugar dentro del enfoque CTS.</a></div>
+                    <div class="aside-links-container"><a href="#subtopic_2" class="aside-links">2. La Ética
+                            Informática: definición y necesidad.</a></div>
+                    <div class="aside-links-container"><a href="#subtopic_3" class="aside-links">3.Principales problemas
+                            éticos generados por
+                            las TIC.</a></div>
+                    <!-- <div class="aside-links-container"><a href="#cont-5" class="aside-links">Vea también</a></div> -->
                     <div class="aside-links-container"><a href="#cont-6" class="aside-links">Bibliografía
                             consultada</a></div>
                 </div>
